[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Actors/Player/Rose/States/AttackManager/AttackObjects/Tether/Tether.gd" type="Script" id=1]
[ext_resource path="res://Objects/Actors/Player/Rose/States/AttackManager/AttackObjects/Tether/TetherSpear.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Actors/Rose/Effects/Tether.png" type="Texture" id=3]



[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TetherSpear/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TetherSpear/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TetherSpear/Area2D/CollisionPolygon2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.01, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Tether" type="Node2D"]
script = ExtResource( 1 )

[node name="TetherSpear" parent="." instance=ExtResource( 2 )]

[node name="Area2D" parent="TetherSpear" index="0"]
cost = 10.0

[node name="CollisionPolygon2D" parent="TetherSpear/Area2D" index="0"]
visible = false
disabled = true

[node name="Sprite" parent="TetherSpear" index="2"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="TetherTimer" type="Timer" parent="."]
one_shot = true

[node name="CleanupTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true
[connection signal="timeout" from="TetherTimer" to="." method="_on_TetherTimer_timeout"]
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]

[editable path="TetherSpear"]
